[gd_scene format=3 uid="uid://c3j8m6nyaqwls"]

[ext_resource type="Script" uid="uid://d3oy6j8e6h64x" path="res://scenes/ui/screens/LoginScreen.gd" id="1_login"]
[ext_resource type="Texture2D" uid="uid://bb0wjcq1h83tj" path="res://assets/sprites/ui/logo.png" id="2_logo"]

[node name="LoginScreen" type="Control" unique_id=1850459183]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_login")

[node name="Background" type="ColorRect" parent="." unique_id=1553795939]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0480001
anchor_bottom = 1.2880001
offset_right = -0.10406494
offset_bottom = 0.22387695
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1492442865]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.256
offset_bottom = -294.9121
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer" unique_id=1637943728]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer" unique_id=60014188]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Flames" type="ColorRect" parent="CenterContainer/MarginContainer/VBoxContainer" unique_id=1597995746]
visible = false
z_index = -1
custom_minimum_size = Vector2(420, 420)
layout_mode = 2
mouse_filter = 1
color = Color(1, 0.5, 0, 0.3)

[node name="Logo" type="TextureRect" parent="CenterContainer/MarginContainer/VBoxContainer" unique_id=1596727567]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_logo")
stretch_mode = 2

[node name="Subtitle" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer" unique_id=1582567516]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "Kadim Mühür'ün Çöküşü"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/MarginContainer/VBoxContainer" unique_id=1328252261]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="UsernameInput" type="LineEdit" parent="CenterContainer/MarginContainer/VBoxContainer" unique_id=1880988114]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "E-posta veya Kullanıcı Adı"
alignment = 1
max_length = 64

[node name="PasswordInput" type="LineEdit" parent="CenterContainer/MarginContainer/VBoxContainer" unique_id=1216917089]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "Şifre"
alignment = 1
max_length = 50
secret = true

[node name="StatusLabel" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer" unique_id=265797954]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="RememberCheck" type="CheckBox" parent="CenterContainer/MarginContainer/VBoxContainer" unique_id=514347154]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Kullanıcı adı ve şifreyi hatırla"

[node name="LoginButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer" unique_id=334883977]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Giriş Yap"

[node name="RegisterButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer" unique_id=1669353977]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Kayıt Ol"

[node name="CenterContainer_VBoxContainer#Spacer2" type="Control" parent="." unique_id=1876301795]
custom_minimum_size = Vector2(0, 30)
anchors_preset = 0

[node name="CenterContainer_VBoxContainer#VersionLabel" type="Label" parent="." unique_id=1480151114]
layout_mode = 0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "v0.1.0 Alpha"
horizontal_alignment = 1
